--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,4 @@ jobs:
           --url "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
           --header "accept: application/json" \
           --header "authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-          --header "content-type: application/json" \
-          --data '{"clearCache":false}'
+          --header "content-type: application/json"
