--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/swagger": "^7.2.0",
+    "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.8.0",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
